--- a/views/signup_success.ejs
+++ b/views/signup_success.ejs
@@ -30,10 +30,10 @@
 	<h1>Successfully Signed Up!!</h1>
 	<div class="container">
 		<div>
-			Add another user: <a href="http://localhost:3000/signup"><h2>Sign Up</h2></a>
+			Add another user: <a href="/signup"><h2>Sign Up</h2></a>
 		</div>
 		<div>
-			Login <a href="http://localhost:3000/login"><h2>Login</h2></a>
+			Login <a href="/login"><h2>Login</h2></a>
 		</div>
 	</div>
 	
