--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,7 +57,7 @@
     <br>
     <br>
     <h2>Login</h2>
-    <form style="margin:0px" action="http://localhost:3000/login" method="post">
+    <form style="margin:0px" action="/login" method="post">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="Email ID"><br>
         <label for="password">Password:</label>
