--- a/views/index.html
+++ b/views/index.html
@@ -134,10 +134,10 @@
             <nav>
                 <ul>
                     <li>Discover <span></span></li>
-                    <a style="text-decoration: none;" href="http://localhost:3000/signup">
+                    <a style="text-decoration: none;" href="/signup">
                         <li>Sign-Up</li>
                     </a>
-                    <a style="text-decoration: none;" href="http://localhost:3000/login">
+                    <a style="text-decoration: none;" href="/login">
                         <li>Login</li>
                     </a>
                     <a style="text-decoration: none;" href="./views/Payment_Transication/view/index.html"><li style="color: black; padding: 6px 20px; background-color: aqua; border-radius: 20px ;">Go Premium</li></a>
