--- a/views/index.ejs
+++ b/views/index.ejs
@@ -376,7 +376,7 @@
         </div>
     </header>
     <script src="asshay.js"></script>
-    <script src="app1.js"></script>
+    <script src="blob/main/server.js"></script>
 </body>
 
 </html>
