--- a/views/index.html
+++ b/views/index.html
@@ -375,7 +375,7 @@
         </div>
     </header>
     <script src="asshay.js"></script>
-    <script src="blob/main/server.js.js"></script>
+    <script src="blob/main/server.js"></script>
 </body>
 
 </html>
