--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
     <header>
         <!-- <div class="subscription-btn"> -->
-        <!-- <a href="../../Payment_Transication/view/index.html"><button>Go Premium</button></a> -->
+        <!-- <a href="blob/main/standard.html"><button>Go Premium</button></a> -->
         <!-- </div> -->
         <div class="menu">
             <!-- <h1>Playlist</h1>
@@ -24,7 +24,7 @@
         </div> -->
             <div style="height: 20%; margin-bottom: 20px;">
                 <!-- <div class="playlist">
-            <h4  class="active"><span></span><i class="bi bi-music-note-list"></i><a style="text-decoration: none; color: white;" href="/views/Payment_Transication/view/index.html">>go pemium</a></h4>
+            <h4  class="active"><span></span><i class="bi bi-music-note-list"></i><a style="text-decoration: none; color: white;" href="blob/main/standard.html">>go pemium</a></h4>
         </div> -->
                 <div class="playlist">
                     <h4 class="active"><span></span><i class="bi bi-music-note-list"></i><a
@@ -46,7 +46,7 @@
             <div class="song">
                 <li class="songItem">
                     <span>01</span>
-                    <img src="img/1.jpg" alt="">
+                    <img src="../public/img/1.jpg" alt="">
                     <h5>On My way <br>
                         <div class="subtitle">Alan Walker
                         </div>
@@ -55,7 +55,7 @@
                 </li>
                 <li class="songItem">
                     <span>02</span>
-                    <img src="img/2.jpg" alt="">
+                    <img src="../public/img/2.jpg" alt="">
                     <h5>On My way <br>
                         <div class="subtitle">Alan Walker
                         </div>
@@ -64,7 +64,7 @@
                 </li>
                 <li class="songItem">
                     <span>03</span>
-                    <img src="img/3.jpg" alt="">
+                    <img src="../public/img/3.jpg" alt="">
                     <h5>On My way <br>
                         <div class="subtitle">Alan Walker
                         </div>
@@ -140,7 +140,7 @@
                     <a style="text-decoration: none;" href="/login">
                         <li>Login</li>
                     </a>
-                    <a style="text-decoration: none;" href="./views/Payment_Transication/view/index.html"><li style="color: black; padding: 6px 20px; background-color: aqua; border-radius: 20px ;">Go Premium</li></a>
+                    <a style="text-decoration: none;" href="blob/main/standard.html"><li style="color: black; padding: 6px 20px; background-color: aqua; border-radius: 20px ;">Go Premium</li></a>
                 </ul>
                 <div class="search">
                     <i class="bi bi-search"></i>
@@ -151,7 +151,6 @@
                     </div>
                 </div>
                 <div class="user">
-                    Hi, <%= username %>!!
                 </div>
             </nav>
             <div class="content">
@@ -160,7 +159,7 @@
                     out of sight Wanna see us alight...</p>
                 <div class="buttons">
                     <button>PLAY</button>
-                    <button>FOLLOW</button>
+                    <button><a href="face.html" style="text-decoration: none;">MOOD</a></button>
                 </div>
             </div>
             <div class="popular">
@@ -297,7 +296,7 @@
                         <a href="arjit.html"><img src="../public/img/arjit.jpg" alt=""></a>
                     </li>
                     <li>
-                        <img src="../public/img/arjit.jpg" alt="">
+                        <img src="img/arjit.jpg" alt="">
                     </li>
                     <li>
                         <a href="darshan.html"> <img src="../public/img/darshan1.jpg" alt=""></a>
