--- a/views/index.html
+++ b/views/index.html
@@ -159,7 +159,7 @@
                     out of sight Wanna see us alight...</p>
                 <div class="buttons">
                     <button>PLAY</button>
-                    <button><a href="face.html" style="text-decoration: none;">MOOD</a></button>
+                    <a href="face.html" style="text-decoration: none;"> <button>MOOD</button></a>
                 </div>
             </div>
             <div class="popular">
