--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <!-- <div class="subscription-btn"> -->
-        <!-- <a href="blob/main/standard.html"><button>Go Premium</button></a> -->
+        <!-- <a href="../main/standard.html"><button>Go Premium</button></a> -->
         <!-- </div> -->
         <div class="menu">
             <!-- <h1>Playlist</h1>
@@ -24,7 +24,7 @@
         </div> -->
             <div style="height: 20%; margin-bottom: 20px;">
                 <!-- <div class="playlist">
-            <h4  class="active"><span></span><i class="bi bi-music-note-list"></i><a style="text-decoration: none; color: white;" href="blob/main/standard.html">>go pemium</a></h4>
+            <h4  class="active"><span></span><i class="bi bi-music-note-list"></i><a style="text-decoration: none; color: white;" href="../main/standard.html">>go pemium</a></h4>
         </div> -->
                 <div class="playlist">
                     <h4 class="active"><span></span><i class="bi bi-music-note-list"></i><a
@@ -375,7 +375,7 @@
         </div>
     </header>
     <script src="asshay.js"></script>
-    <script src="blob/main/server.js"></script>
+    <script src="../main/server.js"></script>
 </body>
 
 </html>
