--- a/views/index.html
+++ b/views/index.html
@@ -140,7 +140,7 @@
                     <a style="text-decoration: none;" href="/login">
                         <li>Login</li>
                     </a>
-                    <a style="text-decoration: none;" href="blob/main/standard.html"><li style="color: black; padding: 6px 20px; background-color: aqua; border-radius: 20px ;">Go Premium</li></a>
+                    <a style="text-decoration: none;" href="../main/standard.html"><li style="color: black; padding: 6px 20px; background-color: aqua; border-radius: 20px ;">Go Premium</li></a>
                 </ul>
                 <div class="search">
                     <i class="bi bi-search"></i>
